# Agentic-ai-app

./: AGENT_TYPES_EXPLAINED.md  DEBUG_ANALYSIS.md  FINAL_SUBMISSION_CHECKLIST.md  HACKATHON_SUBMISSION_VERIFIED.md  HACKATHON_VERIFICATION.md  HARD_TASK_PERFORMANCE_EXPLAINED.md  SESSION_COMPLETION_SUMMARY.md  app.py  comprehensive_requirements_check.py  inference.py  openenv_cli.py  pyproject.toml  results.json  validate_and_confirm_docker.py  validate_openenv.py  validate_openenv_spec.py
server/: app.py
src/: env.py  graders.py  inference.py
