[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-response-env"
version = "1.0.0"
description = "AI-powered emergency response simulation for smart cities and disaster management"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.0",
    "gymnasium>=0.28.0",
    "openenv>=0.1.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["src", "server"]
